Table styles to avoid overflow

--- a/src/content/main.css
+++ b/src/content/main.css
@@ -10,6 +10,7 @@ body {
 section {
   background-color: white;
   margin-top: 70px;
+  padding-bottom: 5px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
